@@ -1,0 +1,5 @@
+Lookup of symbols defined in the base environment has been sped up by
+flagging symbols that have a base environment definition recorded in
+the global cache. This allows the definition to be retrieved quickly
+without looking in the hash table.  In particular, this speeds up
+basic operations such as "+", "<-", "if", and "length".
